<resources>
    <string name="app_name">BangunganKu</string>
    <string name="location">Location</string>
    <string name="icon_location">icon_location</string>
    <string name="title_activity_home2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_report">Report</string>
    <string name="title_service_name">Service name</string>
    <string name="report_id">Laporan #99</string>
    <string name="reporter_name">Name</string>
    <string name="address_title">Address</string>
    <string name="report_date">yyyy - mm - dd</string>
    <string name="damage_type">damage</string>
    <string name="reporter_title">Name</string>
    <string name="reporter_name_default">User name</string>
    <string name="building_images">Building_Images</string>
    <string name="building_type_text">Type</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current Location</string>
    <string name="title_profile">Profile</string>
    <string name="building_service_title">School</string>
    <string name="history_title">History</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="login_title">Login</string>
    <string name="dont_have_account_info">Don\'t have an account?</string>
    <string name="tv_clickable_register">Register</string>
    <string name="logo_desc">logo</string>
    <string name="tv_click_forget_password">Forget Password?</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">Submit</string>
    <string name="register_title">Register</string>
    <string name="full_name_title">Full Name *</string>
    <string name="e_mail_title">E-mail *</string>
    <string name="password_required">Password *</string>
    <string name="confirm_password_required">Confirm Password *</string>
    <string name="phone_title">Phone *</string>
    <string name="province_title">Province *</string>
    <string name="city_titlew">City *</string>
</resources>