<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="35dp"
    tools:context=".ui.auth.LoginFragment">



    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="152dp"
        android:layout_height="67dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo_desc"
        android:fontFamily="sans-serif-medium"
        android:maxWidth="152dp"
        android:maxHeight="67dp"
        android:src="@drawable/logo_login"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:autofillHints=""
        android:backgroundTint="@color/app_blue"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/email_title"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColor="@color/app_blue"
        android:textColorHint="@color/app_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/app_blue"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/password_title"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColor="@color/app_blue"
        android:textColorHint="@color/app_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:rippleColor="@color/orange_700" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato"
        android:text="@string/tv_click_forget_password"
        android:textColor="@color/app_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/dont_have_account_info"
        android:textColor="@color/app_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/tv_clickable_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato"
        android:linksClickable="false"
        android:text="@string/tv_clickable_register"
        android:textColor="@color/app_blue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
