<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp"
    tools:context=".ui.service.building.ReportFragment">


    <TextView
        android:id="@+id/tv_address_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/address_title"
        android:textColor="@color/app_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_title" />

    <TextView
        android:id="@+id/tv_building_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/building_type_text"
        android:textColor="@color/grayish_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_report" />

    <EditText
        android:id="@+id/tv_building_type_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_blue"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/building_service_title"
        android:inputType="textPersonName"
        android:textColor="@color/app_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_building_type" />

    <!--    <TextView-->
    <!--        android:id="@+id/tv_building_type_content"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="35dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="35dp"-->
    <!--        android:fontFamily="sans-serif-medium"-->
    <!--        android:text="@string/building_type_text"-->
    <!--        android:textColor="@color/app_blue"-->
    <!--        android:textSize="16sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_building_type" />-->

    <TextView
        android:id="@+id/tv_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        android:text="@string/address_title"
        android:textColor="@color/grayish_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_report" />

    <TextView
        android:id="@+id/tv_name_report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/reporter_title"
        android:textColor="@color/grayish_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/reporter_name_default"
        android:textColor="@color/app_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_report_title" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@android:color/holo_green_dark"
        android:fontFamily="@font/lato"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_building_type_content"
        app:rippleColor="@color/grayish_500"
        tools:text="Submit" />


</androidx.constraintlayout.widget.ConstraintLayout>