<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="35dp"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_regis"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/core_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regis_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/app_blue"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_regis" />

        <TextView
            android:id="@+id/fullName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/full_name_title"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regis_title" />

        <EditText
            android:id="@+id/editRegistrationPhone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_label" />

        <EditText
            android:id="@+id/editRegistrationFullName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName_label" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/e_mail_title"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegistrationFullName" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_required"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_data" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_password_required"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegistrationPass" />

        <EditText
            android:id="@+id/editRegistrationEmail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <EditText
            android:id="@+id/editRegistrationPass"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <EditText
            android:id="@+id/editRegistrationConfirmPass"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_label" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_title"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegistrationEmail" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_button"
            android:text="Register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/province_data"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/province_label" />

        <EditText
            android:id="@+id/city_data"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/app_blue"
            android:inputType="textPhonetic"
            android:textColor="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_label" />

        <TextView
            android:id="@+id/province_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/province_title"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegistrationPhone" />

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/city_titlew"
            android:textColor="@color/app_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/province_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>