<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/icon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.service.building.ServiceReportActivity">


    <TextView
        android:id="@+id/tv_report_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="6dp"
        android:text="@string/report_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_id" />

    <TextView
        android:id="@+id/tv_report_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="Fill up the data"
        android:textColor="@color/app_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button"
        android:minWidth="40dip"
        android:minHeight="40dip"
        android:text="@string/take_picture"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_camera_alt_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="18dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_layout" />

    <FrameLayout
        android:id="@+id/photo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_date">

        <ImageView
            android:id="@+id/service_photo"
            android:layout_width="198dp"
            android:layout_height="198dp"
            android:layout_gravity="center|fill"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/building_images"
            android:src="@drawable/ic_baseline_add_box_24" />

        <TextView
            android:id="@+id/damage_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_text_damage"
            android:fontFamily="@font/lato_bold"
            android:padding="5dp"
            android:text="@string/damage_type"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/report_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/report_section"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button"
        android:minHeight="40dip"
        android:text="Reset"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_refresh"
        app:iconPadding="10dp"
        app:iconSize="18dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>